<resources>
    <string name="app_name">Phrase</string>
    <string name="copy_text_from_clipboard">COPY TEXT FROM CLIPBOARD</string>
    <string name="find_phrase">FIND PHRASE</string>
    <string name="reset">RESET</string>
    <string name="place_text_from_clipboard">       Place text from clipboard</string>
    <string name="find_text">Find phrase</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="xxx" />
    <string name="paste_text_from_clipboard">Paste text from clipboard...</string>
    <string name="app_logo">App logo</string>

</resources>